--- a/zion/templates/user_profile.html
+++ b/zion/templates/user_profile.html
@@ -44,7 +44,7 @@
             </li>
             
             <li>
-              <a href="/users/fengyucai-324/details/">Profile Details</a>
+              <a href="/user/{{ profile_user.id }}/collections/"><i class="icon-bookmark"></i> Collections</a>
             </li>
             
           </ul>
