--- a/zion/templates/user_follows.html
+++ b/zion/templates/user_follows.html
@@ -45,7 +45,8 @@
             </li>
             
             <li>
-              <a href="/users/fengyucai-324/details/">Profile Details</a>
+              <a href="/user/{{ profile_user.id }}/collections/"><i class="icon-bookmark"></i> Collections</a>
+
             </li>
             
           </ul>
