Add change option of signature and username

--- a/zion/templates/change_avatar.html
+++ b/zion/templates/change_avatar.html
@@ -9,9 +9,10 @@
       
       <li class="active"><a href="/user/chavatar/">Change Avatar</a></li>
       
-      <li><a href="/usercp/credentials/">Change E-mail or Password</a></li>
-      
-      <li><a href="/usercp/username/">Change Username</a></li>
+      <li><a href="/user/chemail/">Change E-mail</a></li>
+      <li><a href="/user/chpwd/">Change Password</a></li>
+      <li><a href="/user/chname/">Change Username</a></li>
+      <li><a href="/user/chsign/">Change Signature</a></li>
       
     </ul>
 
