fix bugs in change_signature.html

--- a/zion/templates/change_signature.html
+++ b/zion/templates/change_signature.html
@@ -27,7 +27,7 @@
  
     <div >
       <div class="form-header">
-        <h1>Change Avatar</h1>
+        <h1>Change Signature</h1>
       </div>
        <form action="" method="post">
         
