fix bugs on main page: link to last poster for each forum

--- a/zion/templates/index.html
+++ b/zion/templates/index.html
@@ -22,7 +22,7 @@
               <div class="thread-name">
                 <a href="/forum/{{ forum.id }}/" class="tooltip-right" title="">{{ forum.description }}</a>
               </div>
-              <div class="muted"><a href="/users/{{ forum.last_author.id }}/" class="last-poster">{{ forum.last_author.username }}</a> - {{ forum.last_postdate }}</div>
+              <div class="muted"><a href="/user/{{ forum.last_author.id }}/" class="last-poster">{{ forum.last_author.username }}</a> - {{ forum.last_postdate }}</div>
             </div>
             
             
