fix bugs articles display on keywords

--- a/zion/templates/all_keywords.html
+++ b/zion/templates/all_keywords.html
@@ -19,15 +19,15 @@
           </h1>
           <ul class="nav nav-tabs header-tabs">
             
-            <li class="active">
+            <li>
               <a href="/tag/">Hot</a>
             </li>
             
             <li>
-              <a href="/tag/new/"">New</a>
+              <a href="/tag/new/">New</a>
             </li>
             
-            <li>
+            <li class="active">
               <a href="/tag/all/">All</a>
             </li>
             
