Implement the function of browsing users on this site

--- a/zion/templates/base.html
+++ b/zion/templates/base.html
@@ -78,7 +78,7 @@
           <li><a href="/popular/" title="Popular Articles" class="hot tooltip-bottom"><i class="icon-fire"></i></a></li>
           <li><a href="/tag/" title="Tagged Articles" class="fresh tooltip-bottom"><i class="icon-leaf"></i></a></li>
         
-          <li><a href="/users/" title="Browse Users" class="tooltip-bottom"><i class="icon-group"></i></a></li>
+          <li><a href="/browseusers/" title="Browse Users" class="tooltip-bottom"><i class="icon-group"></i></a></li>
           <li><a href="/tos/" title="Forum Rules" class="tooltip-bottom"><i class="icon-certificate"></i></a></li>
           
         </ul>
