--- a/zion/templates/upload_avatar.html
+++ b/zion/templates/upload_avatar.html
@@ -5,10 +5,13 @@
 
     <ul class="nav nav-pills usercp-tabs">
       <li class="nav-header">Your Control Panel</li>
-      <li><a href="/usercp/">Forum Options</a></li>
       <li class="active"><a href="/user/chavatar/">Change Avatar</a></li>
-      <li><a href="/usercp/credentials/">Change E-mail or Password</a></li>
-      <li><a href="/usercp/username/">Change Username</a></li>
+       <li><a href="/user/chemail/">Change E-mail</a></li>
+      <li><a href="/user/chpwd/">Change Password</a></li>
+      
+      <li><a href="/user/chname/">Change Username</a></li>
+      
+      <li><a href="/user/chsign/">Change Signature</a></li>
     </ul>
 
   </div>
