Add forum rule page

--- a/zion/templates/base.html
+++ b/zion/templates/base.html
@@ -79,7 +79,7 @@
           <li><a href="/tag/" title="Tagged Articles" class="fresh tooltip-bottom"><i class="icon-leaf"></i></a></li>
         
           <li><a href="/browseusers/" title="Browse Users" class="tooltip-bottom"><i class="icon-group"></i></a></li>
-          <li><a href="/tos/" title="Forum Rules" class="tooltip-bottom"><i class="icon-certificate"></i></a></li>
+          <li><a href="/rules/" title="Forum Rules" class="tooltip-bottom"><i class="icon-certificate"></i></a></li>
           
         </ul>
         
