Modify settings file to migrate the database from mysql to postgresql

--- a/zion/templates/index.html
+++ b/zion/templates/index.html
@@ -240,7 +240,7 @@
               <div class="thread-name">
                 <a href="/thread/hi-all-308/new/">Hi all!</a>
               </div>
-              <div class="muted"><a href="/users/xavier-307/" class="last-poster">xavier</a> - July 26, 2014</div>
+              <div class="muted"><a href="/users/xavier-307/" class="last-poster"></a> - July 26, 2014</div>
             </div>
             
             
@@ -269,7 +269,7 @@
               <div class="thread-name">
                 <a href="/thread/this-forum-is-emptied-automatically-32/new/" class="tooltip-top" title="This forum is emptied automatically">This forum is emptied automatic...</a>
               </div>
-              <div class="muted"><a href="/users/rafalp-1/" class="last-poster">rafalp</a> - March 31, 2013</div>
+              <div class="muted"><a href="/users/rafalp-1/" class="last-poster"></a></div>
             </div>
             
             
