--- a/zion/templates/change_email.html
+++ b/zion/templates/change_email.html
@@ -8,10 +8,10 @@
       
       
       <li><a href="/user/chavatar/">Change Avatar</a></li>
-      <li><a href="/user/chemail/">Change E-mail</a></li>
+      <li  class="active"><a href="/user/chemail/">Change E-mail</a></li>
       <li><a href="/user/chpwd/">Change Password</a></li>
       
-      <li  class="active"><a href="/user/chname/">Change Username</a></li>
+      <li><a href="/user/chname/">Change Username</a></li>
       
       <li><a href="/user/chsign/">Change Signature</a></li>
       
@@ -28,25 +28,25 @@
  
     <div >
       <div class="form-header">
-        <h1>Change Username</h1>
+        <h1>Change Email</h1>
       </div>
        <form action="" method="post">
         
         <div class="form-fields">
           {% csrf_token %}
+          {% load widget_tweaks %}
             <div  class="controls">
-                <label class="control-label" for="id_username">Username:</label>
+                <label class="control-label" for="id_email">E-mail address</label>
                 <div class="controls">
-                    <input id="id_username" name="username" class="span8" type="text" maxlength="255" value="{{ user.username }}">                    
+                    <input id="id_email" name="email" class="span8" type="text" maxlength="255" value="{{ user.email }}">                    
                 </div>
-                <p class="help-block" style="font-weight:bold; color:red">{{ error }}</p>
            </div>
         
       
          
         </div>
         <div class="form-actions">
-          <button type="submit" class="btn btn-primary">Save Signature</button>
+          <button type="submit" class="btn btn-primary">Save Email</button>
         </div>
       </form>
     </div>
