--- a/zion/templates/change_email.html
+++ b/zion/templates/change_email.html
@@ -38,8 +38,12 @@
             <div  class="controls">
                 <label class="control-label" for="id_email">E-mail address</label>
                 <div class="controls">
-                    <input id="id_email" name="email" class="span8" type="text" maxlength="255" value="{{ user.email }}">                    
+                    <input id="id_email" name="email" class="span4" type="text" maxlength="255" value="{{ user.email }}">                    
                 </div>
+                {% for error in form.email.errors %}
+                		<p class="help-block" style="font-weight:bold; color:red">{{ error }}</p>
+                {% endfor %}
+                <p class="help-block">{{ form.email.help_text }}</p>
            </div>
         
       
