--- a/zion/templates/change_username.html
+++ b/zion/templates/change_username.html
@@ -46,7 +46,7 @@
          
         </div>
         <div class="form-actions">
-          <button type="submit" class="btn btn-primary">Save Signature</button>
+          <button type="submit" class="btn btn-primary">Save Username</button>
         </div>
       </form>
     </div>
