--- a/zion/templates/base.html
+++ b/zion/templates/base.html
@@ -37,7 +37,7 @@
       <div class="container">
         <a href="/" class="brand">Zion</a>
         
-        <form action="/search/quick/" method="post" class="navbar-form pull-left">
+        <form action="/search/" method="post" class="navbar-form pull-left">
           {% csrf_token %}
           <div class="navbar-search-form">
             <div id="navbar-search" class="navbar-search-border">
@@ -48,10 +48,6 @@
               <div class="extra">
                 <div class="extra-form">
                   <div class="control">
-                    <label>Search in:</label>
-                    <select name="search_in">
-                      <option value="forums" selected="selected">Forums</option>
-                    </select>
                   </div>
                   <div class="control">
                     <label>Author name:</label>
@@ -59,13 +55,12 @@
                   </div>
                   <div class="control">
                     <label class="checkbox">
-                      <input name="search_thread_titles" type="checkbox"> Search only in titles
+                      <input name="search_in_titles" type="checkbox"> Search only in titles
                     </label>
                   </div>
                 </div>
                 <div class="form-actions">
                   <button type="submit" class="btn btn-primary"><i class="icon-search"></i> Search</button>
-                  <a href="/search/">Advanced Search</a>
                 </div>
               </div>
             </div>
